# GoodBird

./: .gitignore  CMakeLists.txt  README.md
inc/GoodBird/: Application.h  Bird.h  Core.h  GoodBirdGame.h  Math.h  Rendering.h  SFMLRenderer.h
src/: Application.cpp  Bird.cpp  Core.cpp  GoodBirdGame.cpp  Math.cpp  SFMLRenderer.cpp  main.cpp
